--- a/images/src/org/intellij/images/editor/actions/SetBackgroundImageDialog.form
+++ b/images/src/org/intellij/images/editor/actions/SetBackgroundImageDialog.form
@@ -21,7 +21,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="IDE background"/>
+              <text value="Frame background"/>
             </properties>
           </component>
           <component id="c72f5" class="com.intellij.ui.components.JBRadioButton" binding="myEditorRb">
